# range-cloud

./: .gitignore  .gitmodules  DEPLOY_GUIDE.md  README.md
.github/workflows/: ci.yml
doc/: build.md  deploy_container.md  deploy_native.md  rest_api.md
scripts/: generate_containerfile.sh
src/: CMakeLists.txt  Config.cmake
src/cloud/: CMakeLists.txt
src/cloud-tool/: CMakeLists.txt
src/cloud-tool/src/: application.cpp  application.h  main_task.cpp  main_task.h
src/cloud/doc/: LICENSE.txt  RELEASE_NOTES.md  RELEASE_NOTES.txt
src/cloud/processes/: helo_world.sh  lib.sh  process_csr.sh  process_report.sh
src/cloud/scripts/: cloud_create_csr.sh  cloud_renew_cert.sh  cloud_setup.sh  cloud_start.sh  cloud_status.sh  cloud_stop.sh  cloud_tool.sh  cloud_update_software.sh
src/cloud/src/: action_handler.cpp  action_handler.h  action_manager.cpp  action_manager.h  action_manager_settings.cpp  action_manager_settings.h  application.cpp  application.h  configuration.cpp  configuration.h  file_index.cpp  file_index.h  file_manager.cpp  file_manager.h  file_manager_settings.cpp  file_manager_settings.h  file_manager_statistics.cpp  file_manager_statistics.h  file_manager_task.cpp  file_manager_task.h  file_object.cpp  file_object.h  mailer.cpp  mailer.h  mailer_settings.cpp  mailer_settings.h  main.cpp  process.cpp  process.h  process_manager.cpp  process_manager.h  process_manager_settings.cpp  process_manager_settings.h  report_manager.cpp  report_manager.h  report_manager_settings.cpp  report_manager_settings.h  service_settings.cpp  service_settings.h  service_statistics.cpp  (+7 more)
